--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,19 +1,14 @@
 .App {
   text-align: center;
+  width: 100%;
+  max-width: 900px;
+  height: 100vh;
+  margin: auto;
+  background-color: white;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
   }
 }
