--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,8 +7,11 @@
   background-color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media screen and (max-width: 700px) {
+  .App {
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    margin: auto;
   }
 }
