--- a/src/components/SearchMap/SearchMap.css
+++ b/src/components/SearchMap/SearchMap.css
@@ -26,16 +26,15 @@ form {
 
 input {
   margin: 0.25em 0.5em;
-  border: 1px solid #696D7D;
+  border: 1px solid #000;
   border-radius: 5px;
   padding: 0.25em 0.5em;
 }
 
 button {
-  color: #696D7D;
   font-weight: 600;
   background-color: #FAF3DD;
-  border: 1px solid #696D7D;
+  border: 1px solid #000;
   border-radius: 5px;
   padding: 0.25em 0.5em;
   cursor: pointer;
@@ -43,4 +42,12 @@ button {
 
 button:active {
   transform: scale(0.95);
+}
+
+@media screen and (max-width: 700px) {
+  .map {
+    margin: auto;
+    width: 300px;
+    height: 80%;
+  }
 }
